# holdco

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  api.py  app.py  conftest.py  data.py  db.py  docker-compose.yml  flake.nix  generate_readme.py  manage.py  mix.exs  models.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements-dev.txt  requirements.txt  seed.example.json  seed.py  simplify.md  yahoo.py
.github/workflows/: ci.yml
assets/css/: app.css  ft.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  secrets.example.exs  test.exs
core/: admin.py  consumers.py  dashboard_urls.py  models.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_userrole.py  0003_assetholding_asset_type.py  0004_approvalrequest_backupconfig_customfield_and_more.py  0005_cashpool_portfoliosnapshot_sanctionsentry_and_more.py
core/tests/: test_api.py  test_e2e.py  test_fuzz.py  test_models.py  test_property.py  test_rbac.py  test_seed.py
e2e/: auth.setup.ts  seed.exs
e2e/specs/: accounting.spec.ts  auth.spec.ts  banking.spec.ts  collaboration.spec.ts  companies.spec.ts  compliance.spec.ts  corporate.spec.ts  dashboard.spec.ts  documents.spec.ts  exports.spec.ts  finance.spec.ts  governance.spec.ts  portfolio.spec.ts  reports.spec.ts
holdco/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
lib/: holdco.ex  holdco_web.ex
test/: test_helper.exs
tests/: conftest.py  test_api.py  test_db.py  test_seed.py
(+779 files in other folders)
