[project]
name = "holdco"
version = "0.1.0"
description = "Open source holding company management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "yfinance>=0.2",
    "streamlit>=1.30",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
holdco-seed = "seed:seed"
